# ATAI

./: .gitignore  Log.md  RFC_Embeddding.ipynb  embedding_training.ipynb  movie_predicate_stats.tsv  pyproject.toml  recommend.ipynb  speakeasy_bot.py
Intermediate Evaluation 1/: requirements.txt
Intermediate Evaluation 1/data/: demo.ttl
Intermediate Evaluation 1/src/: app_config.py  executor.py  list_data.py  loader.py  main.py  speakeasy_bot.py  test_queries.txt
Project Submission 2/: README.md  speakeasy_bot.py
Project Submission 2/agent/: composer.py  config.py  constants.py  embedding_executor.py  entity_linker.py  graph_executor.py  nlq.py  relation_mapper.py  utils.py
Project Submission 3/: debug_genres.py  debug_images.py  pyproject.toml  speakeasy_bot.py
Project Submission 3/agent/: cf_engine.py  composer.py  config.py  constants.py  embedding_executor.py  entity_linker.py  graph_executor.py  logging_config.py  nlq.py  preference_parser.py  recommendation_engine.py  relation_mapper.py  session_manager.py  utils.py
Project Submission 3/app/: main.py
Project Submission 3/tests/: check_data.py  run_local_cli.py
agent/: __init__.py  cf_engine.py  composer.py  config.py  constants.py  embedding_executor.py  entity_linker.py  graph_executor.py  logging_config.py  multimedia_index.py  nlq.py  preference_parser.py  recommendation_engine.py  relation_mapper.py  session_manager.py  utils.py
app/: __init__.py  main.py
embeddings/: RFC_relation_embeds.npy
metadata/: entity_titles.tsv  movie_plots.tsv  relation_ids_ordered.tsv
(+7 files in other folders)
